test/typecheck/errors/quant-missing-use.boa
o: output collection of string;

foreach (i: int; len(input.programming_languages) > 0)
	o << "test";
